--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
           <ul class="dropdown-menu">
             <li><%=link_to 'Create PicStory', new_story_path %></li>
             <li><%=link_to 'My PicStories', stories_path %></li>
-            <li><a href="#">'My Profile'</a></li>
+            <li> <%= link_to 'My Profile', users_show_path %>  </li>
             <li role="separator" class="divider"></li>
             <li><a href="#">'Sign Out'</a></li>
           </ul>
