--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,18 +11,23 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
+      <% if logged? %>
       <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-user-circle-o" style="font-size:24px""></i>
             <span class="caret"></span>
           </a>
           <!-- ¡Pending implementation! Should work toggling between sign_in and sign_out -->
-          <ul class="dropdown-menu">
-            <li><%=link_to 'Create PicStory', new_story_path %></li>
-            <li><%=link_to 'My PicStories', stories_path %></li>
-            <li> <%= link_to 'My Profile', users_show_path %>  </li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">'Sign Out'</a></li>
+            <ul class="dropdown-menu">
+              <li><%=link_to 'Create PicStory', new_story_path %></li>
+              <li><%=link_to 'My PicStories', stories_path %></li>
+              <li><%= link_to 'My Profile', users_show_path %></li>
+              <li role="separator" class="divider"></li>
+              <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+              <li><%= link_to 'Log In', new_session_path %></li>
+              <li><%= link_to 'Sign In', users_path %></li>
+          <% end %>
           </ul>
         </li>
       </ul>
